<resources>
    <string name="app_name">OzAtlas</string>
    <string name="app_version">Version 2.0.1</string>
    <string name="package_name">au.org.ala.mobile.ozatlas</string>

    <string name="ecodata_url">https://ecodata.ala.org.au/</string>
    <string name="biocollect_url">https://biocollect.ala.org.au/</string>
    <string name="bie_url">http://bie.ala.org.au/</string>
    <string name="bio_cache_url">http://biocache.ala.org.au/</string>

    <string name="about_us_url">http://www.ala.org.au/about-the-atlas/</string>
    <string name="contact_us_url">http://www.ala.org.au/about-the-atlas/contact-us/</string>
    <string name="register_url">https://auth.ala.org.au/userdetails/registration/createAccount</string>
    <string name="sighting_detail_url">https://biocollect.ala.org.au/bioActivity/index/%1$s?mobile=true</string>
    <string name="sighting_edit_url">https://biocollect.ala.org.au/bioActivity/mobileEdit/%1$s?mobile=true</string>
    <string name="explore_image_url">http://ozatlas-proxy.ala.org.au/image/thumbnail/%1$s</string>

    <string name="title_activity_main">OzAtlas</string>
    <string name="about_title">About the ALA</string>
    <string name="add_title">Record a Sighting</string>
    <string name="map_explore_title">Explore Species By Location</string>
    <string name="offline_information_title">Offline Information</string>
    <string name="all_sighting_title">All Sightings</string>
    <string name="my_sighting_title">My Sightings</string>
    <string name="species_group_title">Explore Species Groups</string>
    <string name="species_animal_title">Explore Animals</string>
    <string name="draft_sighting_title">Draft Sightings</string>
    <string name="contact_us_title">Contact the ALA</string>
    <string name="explore_species_title">Explore Species</string>

    <string name="add_offline_species">Add Species</string>
    <string name="add_offline_location">Add Locations</string>
    <string name="available_species">Available Species</string>
    <string name="available_locations">Available Locations</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_data_confirmation">Are you sure you want to delete all the offline species?</string>
    <string name="clear_location_confirmation">Are you sure you want to delete all the offline locations?</string>
    <string name="delete_species_confirmation">Are you sure you want to delete this species?</string>
    <string name="delete_location_confirmation">Are you sure you want to delete this location?</string>
    <string name="delete_species_title">Delete Species</string>

    <string name="primary_keys_parameter">PRIMARY_KEYS</string>
    <string name="tag_string_parameter">TAGS</string>
    <string name="is_location_selection_parameter">IS_LOCATION_SELECTION</string>
    <string name="location_selection_parameter">LOCATION_SELECTION</string>

    <string name="logout_message">All your draft projects will be deleted. Would you like to logout?</string>
    <string name="nothing_to_upload">There is no draft record to upload</string>

    <string name="draft_sighting_plural">Following %1$d Records are not yet submitted to the server</string>
    <string name="draft_sighting_singular">Following %1$d Record is not yet submitted to the server</string>
    <string name="species_name">Species: %1$s</string>
    <string name="tags_name">Tags: %1$s</string>
    <string name="album_name">Atlas Camera</string>

    <string name="map_key">AIzaSyApH8-iLdRdomeh1bwzCicpKySpOBiZY00</string>

    <string name="project_activity_id">e61eb018-02a9-4e3b-a4b3-9d6be33d9cbb</string>
    <string name="project_id">f813c99c-1a1d-4096-8eeb-cbc40e321101</string>
    <string name="project_type">OzAtlas Sightings</string>
    <string name="project_output_name">Single Sighting - Advanced</string>
    <string name="facet">projectNameFacet:ALA species sightings and OzAtlas</string>


    <string name="location_missing">Please select a location</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="map_zoom_message">Zoom out/pan to expand/move the target area.</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="total_sighting">Total Sightings: %1$d</string>
    <string name="species_count">Species Count: %1$d</string>
    <!--<string name="total_group_count">Total Groups: %1$d, Total Species: %2$d</string>-->
    <string name="total_group_count">Total Groups: %1$d</string>
    <string name="total_species_count">Total Species: %1$d</string>
    <string name="tag_separator">;&#160;</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
</resources>

