<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_to_photos_black_24dp"
            android:title="@string/add_title" />

        <item
            android:id="@+id/nav_all_sighting"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/all_sighting_title" />

        <item
            android:id="@+id/nav_my_sighting"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/my_sighting_title" />

        <item
            android:id="@+id/nav_draft_sighting"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/draft_sighting_title" />

        <item
            android:id="@+id/nav_location_species"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/map_explore_title" />

    </group>


    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="Logout" />
        </menu>
    </item>

    <item android:title="Atlas">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about_title" />

            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_mail_outline_black_24dp"
                android:title="@string/contact_us_title" />
        </menu>
    </item>
</menu>
