<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_species"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/add_offline_species" />

    <include layout="@layout/horizonal_line" />

    <TextView
        android:id="@+id/available_species"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/available_species" />

    <include layout="@layout/horizonal_line" />

    <TextView
        android:id="@+id/clear_data"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/clear_data" />

    <include layout="@layout/horizonal_line" />

</LinearLayout>