<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/heading_background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/species_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add_species"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/add_offline_species" />

    <include layout="@layout/horizonal_line" />

    <TextView
        android:id="@+id/available_species"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/available_species" />

    <include layout="@layout/horizonal_line" />

    <TextView
        android:id="@+id/clear_species"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/clear_data" />

    <include layout="@layout/horizonal_line" />

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/heading_background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/location_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add_location"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/add_offline_location" />

    <include layout="@layout/horizonal_line" />

    <TextView
        android:id="@+id/available_location"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/available_locations" />

    <include layout="@layout/horizonal_line" />

    <TextView
        android:id="@+id/clear_location"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/clear_data" />

    <include layout="@layout/horizonal_line" />
</LinearLayout>